<resources>
	<string name="app_name">Wandz</string>
	<string name="welcomewizard">WelcomeWizard</string>
	<string name="enter_wizardworld">Wandz</string>
	<string name="enter_wizardworld_subtitle">Engineers are wizards too</string>
	<string name="name_wizard">name wizard</string>
	<string name="name">Name</string>
	<string name="your_name">Wizard name</string>
	<string name="enter">Submit</string>
	<string name="gestures">Gestures</string>
	<string name="textview">TextView</string>
	<string name="title_activity_test">test</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>
	<string name="choose_your_name">Choose Your Name</string>
	
	<string name="menu_home">Home</string>
	<string name="menu_gallery">Gallery</string>
	<string name="menu_slideshow">Slideshow</string>
	<string name="menu_tools">Tools</string>
	<string name="menu_share">Share</string>
	<string name="menu_send">Send</string>
	<string name="title_activity_navigation_drawer_test">NavigationDrawerTest</string>
	<string name="multiplayer">Multiplayer</string>
	<string name="previous">Previous</string>
	<string name="next">Next</string>
	<string name="connections">Connections</string>
	<string name="choose_a_gesture_and_practice_with_your_wand">Choose a gesture and practice with your wand!</string>
	<string name="singleplayer">Singleplayer</string>
	<string name="my_wand">My Wand</string>
	<string name="training_mode">Training</string>
	<string name="shoot">Shoot!</string>
	<string name="mode">mode</string>
	<string name="health">Health</string>
	<string name="strength">Strength</string>
	<string name="game_mode">Game Mode</string>
	<string name="score">Score</string>
	<string name="my_score">my_score</string>
	<string name="cape_color">Cape</string>
	<string name="right"><![CDATA[>]]></string>
	<string name="left"><![CDATA[<]]></string>
	<string name="hat_color">Hat Color</string>
	<string name="outfit_color">Outfit</string>
	<string name="skin_color">Skin</string>
	<string name="hair_color">Hair</string>
	<string name="gender">Gender</string>
	<string name="ready">Ready</string>
	<string name="eye_color">Eye</string>
	<string name="randomize">Random</string>
	<string name="leave_the_game">Leave The Game</string>
	<string name="join_the_game">Join The Game</string>
	<string name="name_player">Name_Player</string>
	<string name="connecting_to_the_server">Connecting To The Server</string>
	<string name="game_status">Game Status</string>
	<string name="players_joined_already">Players</string>
	<string name="welcome">Welcome!</string>
	<string name="setup_your_wand">Wand</string>
	<string name="enter_multiplayer_world">Play game</string>
	<string name="enter_training_world">Training</string>
	<string name="feel_the_magic">Feel The Magic!</string>
	<string name="change_profile">Profile</string>
	<string name="click_here_if_you_re_the_gamemaster">Click Here If You\'re The GameMaster</string>
	<string name="stop_the_game">Stop Game</string>
	<string name="enter_the_secret_code_to_enter_master_mode">Enter the secret code to claim master</string>
	<string name="start_the_game">Start Game</string>
	<string name="mode_game">MODE</string>
	<string name="previous_mode">PREVIOUS\nMODE</string>
	<string name="next_mode">NEXT\nMODE</string>
	<string name="energy">Energy</string>
	<string name="last_hit">Last Hit</string>
	<string name="last_hit_by">Last Hit By</string>
	<string name="notifications">Game has begun!</string>
	<string name="show_again">Show Again</string>
	<string name="well_done">Well Done!</string>
	<string name="learn_the_gestures_with_your_wand">Practice The Gestures With Your Wand</string>
	<string name="join">Join</string>
	<string name="practice">Practice</string>
	<string name="skip_the_tutorial">skip the tutorial</string>
	<string name="name_wand">Name Wand</string>
	<string name="enter_demo_mode_without_wand">Demo mode\n(no wand needed)</string>
	<string name="choose_your_wand">Your wand</string>
	<string name="a_wizard_has_only_one_wand_you_already_have_one">A Wizard Has Only One Wand! You Already Have One.
	</string>
	<string name="start_text">Touch the screen to continue</string>
	<string name="choose_wand_info">Choose a wand</string>
	<string name="master_switchmode_info">Select your mode and submit it</string>
	<string name="game_busy">game has already started</string>
	<string name="Scores">Match results</string>
	<string name="results_mvp">MVP</string>
	<string name="results_second">2nd</string>
	<string name="results_third">3rd</string>
	<string name="skip_the_intro">skip the intro</string>
	<string name="choose_another">A Wizard Has Only One Wand! Disconnect From Your Current Wand To connect To Another.
	</string>
	<string name="Disconnect">Disconnect</string>
	<string name="spells">spells</string>
	<string name="spellName1">spellie</string>
	<string name="spellName2">spillie</string>
	<string name="spellName3">spollie</string>
	<string name="damage">damage</string>
	<string name="damage1">200</string>
	<string name="damage2">300</string>
	<string name="damage3">100</string>
	<string name="healthMin">health -</string>
	<string name="healthPlus">health +</string>
	<string name="spellsInfo">These are the spells you can conjure.\nThe inflicted damage to your opponent is the score you get.
	</string>
	<string name="tutorial">tutorial</string>
    <string name="done">Done!</string>
    <string name="menu">Menu</string>
    <string name="spellName4">Stupefy</string>
	<string name="spellName5">SectumSempra</string>
	<string name="spellName6">Expecto Patronum</string>
	<string name="back_to_menu">To Menu</string>
	<string name="hitYou">umami hit you</string>
</resources>
