<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/line1">
        <item
            android:id="@+id/profile"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/single_player"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/multi_player"
            android:icon="@drawable/ic_multiplayer"
            android:title="@string/multiplayer" />

        <item
            android:id="@+id/connections"
            android:icon="@drawable/ic_multiplayer"
            android:title="@string/connections" />

        <item
            android:id="@+id/exit"
            android:title="@string/menu_tools" />

    </group>

</menu>
