<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ChooseYourWand"
                                                   android:background="@drawable/ic_background_gradient">
    
    <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/big_john"
            android:gravity="center"
            android:text="@string/choose_your_wand"
            android:textColor="@color/wizardWhite"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:textAlignment="center" android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline16"/>

    <TextView
        android:id="@+id/already"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/big_john"
        android:gravity="center"
        android:text="@string/choose_another"
        android:textColor="@color/wizardDarkBlue"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:textAlignment="center" />
    
    <Button
            android:id="@+id/demo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/ButtonColor"
            android:fontFamily="@font/big_john"
            android:text="@string/enter_demo_mode_without_wand"
            android:textColor="@color/ButtonTextColor"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" android:stateListAnimator="@null"/>
    
    <Button
            android:id="@+id/menu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/ButtonColor"
            android:fontFamily="@font/big_john"
            android:text="@string/back_to_menu"
            android:textColor="@color/ButtonTextColor"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Disconnect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" android:stateListAnimator="@null"/>
    
    <Button
            android:id="@+id/Disconnect"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/ButtonColor"
            android:fontFamily="@font/big_john"
            android:text="@string/Disconnect"
            android:textColor="@color/ButtonTextColor"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu"
            app:layout_constraintTop_toTopOf="@+id/guideline2" android:stateListAnimator="@null"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.80"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/wand_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline1"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline16"
            app:layout_constraintGuide_percent="0.15"/>
    <TextView
            android:text="@string/choose_wand_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/WandName"
            app:layout_constraintTop_toTopOf="@+id/guideline16" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/wand_recycler" android:textAlignment="center"
            android:fontFamily="@font/big_john" android:textStyle="bold" android:textSize="14sp"
            android:textColor="@color/wizardWhite"/>

</androidx.constraintlayout.widget.ConstraintLayout>