<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/start"
                                                   android:background="@drawable/ic_gradient_start"
                                                   android:onClick="onClick"
                                                   tools:context=".Start">
    
    
    <Button
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/slim_joe"
            android:text="@string/enter_wizardworld"
            android:textAllCaps="false"
            android:textColor="@color/wizardWhite"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.482"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/enter_wizardworld_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/enter"
            android:fontFamily="@font/slim_joe" android:textAlignment="center" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold" android:textSize="12sp"
            android:textColor="@color/wizardWhite"/>
    <TextView
            android:text="@string/start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_touch_continue" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="125dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:fontFamily="@font/slim_joe"
            android:textStyle="bold" android:textColor="@color/wizardWhite"/>

</androidx.constraintlayout.widget.ConstraintLayout>